# mujoco-c

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Lingo.toml  Makefile  README.md
src/: CarAuto.lf  CarLineFollow.lf  CarPlatoon.lf  InvertedPendulum.lf  MuJoCoBasicDemo.lf  MuJoCoCarAutoDemo.lf  MuJoCoCarDemo.lf  MuJoCoPandaDemo.lf  Panda.lf  PandaDemo.lf  PandaDemoParameters.csv
src/CentralizedRobots/: ReadSensorDataUnit.lf  RobotControlParametersWidowX.csv  RobotControlParametersvx300s.csv  WaypointParametersvx300s.csv  centralizedController.lf
src/FederatedRobots/: MotorControlUnit.lf  federatedController.lf
src/WidowXController/: FFwd.lf  MotorControlUnit.lf  Pathplanner.lf  PathplanningUnit.lf  ReadSensorDataUnit.lf  RobotStateReceiver.lf  SetMotor.lf  Sum.lf  WaypointParametersvx300s.csv  controller.lf  pid.lf
src/centralizedRobots/: CentralizedController.lf  Pathplanner.lf  RealRobots.lf
src/federatedRobots/: FederatedController.lf  Pathplanner.lf  RealRobots.lf  RobotControl.lf  WaypointParametersvx300sTest.csv
src/federatedRobotsWaypoints/: FederatedControllerWP.lf  Pathplanner.lf  RobotControl.lf  SetMotor.lf  WaypointParametersWidowX.csv  WaypointParametersWidowXTest.csv  WaypointParametersvx300s.csv  WaypointParametersvx300sTest.csv
src/include/: mujoco.cmake
src/lib/: MuJoCoAdvance.lf  MuJoCoAuto.lf  MuJoCoBase.lf  MuJoCoCar.lf  MuJoCoCarAuto.lf  MuJoCoInvertedPendulum.lf  MuJoCoPanda.lf  MuJoCoVX300S.lf  MuJoCoWidowX.lf  TwoRobots.lf  TwoRobotsFederated.lf
toolchains/: pico-toolchain.cmake  pico-toolchain2.cmake
(+7 files in other folders)
